feat: add API rate limiting and security hardening